src/com/touzbi/ansa/antlrgrammar/Params.g4
grammar Params;

import Primitives;

paramBlock
:
	'(' paramList ')'
;

paramList
:
	paramPair
	(
		',' paramPair
	)*
;

paramPair
:
	paramName PARAM_DELIMITER paramValue
;

paramName
:
	ID
;

paramValue
:
	QUOTED_STRING
	| paramRef
;

paramRef
:
	ID
;

PARAM_DELIMITER
:
	':'
;
